# FNO-for-Phase-Field-Dynamics

./: .gitignore  README.md  data.ipynb  eval.ipynb  eval_ood.ipynb  eval_ood_hf_low_e.ipynb  eval_test.ipynb  fine_tuning.ipynb  plot_data.ipynb  pyproject.toml  temp.ipynb  test.py  training.ipynb  training.py
data/: config.json  config2.json
lib/: allen-cahn-template.py  allen_cahn.py  dataset.py  layers.py  model.py  training.py  utils.py
models/: tfno_model.pth  tfno_model_tuned.pth
src/: allen-cahn-template.py  dataset.py  layers.py  model.py  training.py  utils.py
writeup/: refs.bib  report.typ
